# Tapestry

./: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md
.github/workflows/: build.yml  checks_develop.yaml  checks_master.yaml
R/: RcppExports.R  Tapestry.R  catch-routine-registration.R  main.R  process_vcf.R  tapestry_project.R
R_ignore/R_scripts/: Make_IBD_transition_lookup.R  beta_approx_test.R  bob_deploy.R
example_data/: simulated_infections.DRCongo.K02.summary.csv  simulated_infections.DRCongo.K02.vcf  simulated_infections.DRCongo.K03.summary.csv  simulated_infections.DRCongo.K03.vcf  simulated_infections.DRCongo.K04.summary.csv  simulated_infections.DRCongo.K04.vcf
example_data/simulated-DRCongo-setA/: simulated_infections.ibd_segments.csv  simulated_infections.summary.csv
example_data/simulated-DRCongo-setB/: simulated_infections.ibd_segments.csv  simulated_infections.summary.csv
inst/extdata/: transition_lookup_list.rds
man/: Tapestry.Rd  check_tapestry_loaded.Rd  is.tapestry_project.Rd  print.tapestry_project.Rd  print_full.Rd  run_mcmc.Rd  summary.tapestry_project.Rd  tapestry_project.Rd
python/: environment.yml  setup.cfg
python/unravel/: cli.py
python/unravel/lib/: chromosomes.py  dirs.py  ibd.py  plot_ibd.py  plot_mcmc.py
python/unravel/sample/: commands.py  main.py
scripts/: infer_multiple_samples.py  plot_ibd_inference.py  plot_mcmc_diagnostics.py
src/: MCMC.cpp  MCMC.h  Particle.cpp  Particle.h  RcppExports.cpp  System.cpp  System.h  bed.cpp  bed.hpp  betabin.cpp  betabin.hpp  combinatorics.cpp  combinatorics.h  combinatorics.hpp  constants.cpp  constants.hpp  data.cpp  data.hpp  haplotype_sampling.cpp  haplotype_sampling.h  ibd.cpp  ibd.hpp  io.cpp  io.hpp  main.cpp  main.h  mcmcs.cpp  mcmcs.hpp  mcmcs_summary.cpp  mcmcs_summary.hpp  misc_v15.cpp  misc_v15.h  model_compare.cpp  model_compare.hpp  model_fitting.cpp  model_fitting.hpp  models.cpp  models.hpp  parameters.cpp  parameters.hpp  (+18 more)
src/dev/: dev_betabin.cpp  dev_eigen_scalar.cpp  dev_understand_copying.cpp  load_vcf.cpp  parse_vcf.cpp  parse_vcf_v2.cpp  random_testing.cpp  test_modulus.cpp  test_vector_of_matrices.cpp
tests/: test_combinatorics.cpp  test_particle.cpp  test_proposals.cpp  test_random.cpp  testthat.R
tests/testthat/: test-assertions_v15.R  test-cpp.R  test_process_vcf.R
