[metadata]
name = unravel
description = Unravel the outputs of Tapestry
author = Jason A. Hendry and Robert Verity
license = MIT
license_files = ../LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers  =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages =
	unravel
install_requires =
	click
	pandas
	numpy
	scipy
	seaborn
	matplotlib
python_requires = >=3.6
#package_dir =
	#=unravel
zip_safe = no

[options.entry_points]
console_scripts =
	unravel = unravel.cli:cli

#[options.extras_requires]
#testing =
#   pytest>=6.0
#	pytest-cov>=2.0
#	flake8>=3.9
#	black>=22.0

[flake8]
max-line-length=88
